march home fixes 2:17am
- added new-order > index /redesign
- renamed index-paged > /redesign
- added new-order > index /greybox
- moved old index june > /_backup
- bottom-para fixed
- js resize disabled
   - added inline override
   - added REMOVE to JS
   - possible windowResize added to not have to reload
- navbar border
- wrapper padding
- quote media sizing
- tile excerpt large/med 50% 33.3333%
- variable for $font-weight, $accentcolor, $quote-size
- added 20 quotes

***need to style tiles for mobile _again_ from screen shots***

--- a/greybox/sass/_prime.scss
+++ b/greybox/sass/_prime.scss
@@ -16,6 +16,9 @@ body {
 //  margin-bottom:$footer-height;
   z-index:1;
   padding-bottom:0;//20px
+  @media (min-width: $break-medium) {
+    padding-top:75px;
+  }
 }
 input, button, select, textarea {
   font-family: inherit;
