--- a/greybox/sass/_navbar.scss
+++ b/greybox/sass/_navbar.scss
@@ -571,8 +571,10 @@
 .navbar {
   background-color: rgba(255,255,255,.9);
   padding: 0px 11px;
+  border-bottom: 1px solid rgba(255,255,255,.9);
   &:hover{
     background-color:white;
+    border-bottom: 1px solid $accentcolor;
   }
 }
 
@@ -703,7 +705,7 @@
     margin-bottom: 0;
   }
   .navbar-brand {
-    background-color:white;
+    //background-color:white;
     position: relative;
     padding: 30px 80px 30px 0;
     margin:0;
