--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -98,6 +98,7 @@ $break-xxlarge: 1600px;
 $gutter: 8px;
 $gutter-neg: -8px;
 $overlap: -36px;
+$module-side: 22px;
 
 // COLUMN WIDTHS
 $col-1: 8.333333333333332%;
