--- a/greybox/sass/_footer.scss
+++ b/greybox/sass/_footer.scss
@@ -11,9 +11,10 @@
   padding:20px 0;
   a{
   color:white;
-  border-bottom:none;
+  border-bottom:1px dotted white;
     &:hover, &:focus {
-      color: $linkhovercolor;
+      color: white;
+      border-bottom: 1px solid white;
     }
   }
   #back-top{
@@ -28,10 +29,10 @@
         opacity:1;
       }
       i{
-        border:2px solid white;
+        border:1px solid white;
         width:38px;
         padding:4px;
-        border-radius:30px;
+        //border-radius:30px;
       }
     }
   }
@@ -50,14 +51,20 @@
   a{
     color:white;
     &:hover{
-      border-bottom:1px dotted white;
+      border-bottom:1px solid white;
     }
+    &.footer-brand{border-bottom:none;}
   }
   address {
     line-height: 18px;
     margin: 0 0 36px;
     a {
       color: #62645c;
+    }
+  }
+  .list-unstyled, ul li{
+    a{color:white;
+      &:hover{border-bottom:1px dotted white;}
     }
   }
   [class^="icon-"], [class*="icon-"], [class^="fa-"], [class*="fa-"] {
@@ -97,6 +104,7 @@
       filter: alpha(opacity = 100);
       text-decoration: none;
       border: none;
+      border-bottom: none;
     }
   }
 }
@@ -147,7 +155,7 @@
 @media (max-width: 767px){
   .footer [class^="icon-"], .footer [class*="icon-"], .footer [class^="fa-"], .footer [class*="fa-"], .footer [class^="material-icons"]{margin-left: 0px;}
   .footer-para{
-    height:400px;
+    height:420px;
     #back-top{
       position:relative;
       display:block;
