--- a/greybox/sass/_quotes.scss
+++ b/greybox/sass/_quotes.scss
@@ -139,3 +139,10 @@ ul#cyclelist li, #shuffle .quote{
   /*#quotes .container{position: relative;min-height: 350px;}*/
   .stats-hero .quote-inner{padding: 10px;}
 }
+#quotes.module-hero{
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin: 0;
+}
