--- a/greybox/sass/_void__quotes.scss
+++ b/greybox/sass/_void__quotes.scss
@@ -74,7 +74,7 @@ ul#cyclelist li, #shuffle .quote{
     min-height: $quotes-size - 120px;
   }
   @media (max-width: 767px){
-    min-height: $quotes-size - 220px;
+    min-height: $quotes-size - 120px;
   }
 }
 @media (min-width: 768px){
@@ -145,4 +145,7 @@ ul#cyclelist li, #shuffle .quote{
   margin-left: 0;
   margin-right: 0;
   margin: 0;
+  @media (max-width: $break-small-max) {
+    margin: 0 -12px;
+  }
 }
