--- a/greybox/css/void.css
+++ b/greybox/css/void.css
@@ -5069,7 +5069,7 @@ p[class*='col-'] {
       padding-left: 20px;
       padding-right: 20px; }
   .container-fluid h3, .container-fluid .h3, .container-fluid h4, .container-fluid .h4, .container-fluid p {
-    padding: 0 80px; }
+    padding: 0 20px; }
     @media (max-width: 767px) {
       .container-fluid h3, .container-fluid .h3, .container-fluid h4, .container-fluid .h4, .container-fluid p {
         padding: 0 10px; } }
@@ -5846,7 +5846,7 @@ p {
   padding-right: 8px;
   padding-left: 3px; }
 
-blockquote.h2 {
+h2, .h2, blockquote.h2 {
   font-weight: 600; }
 
 @media (max-width: 768px) {
