--- a/greybox/sass/void.scss
+++ b/greybox/sass/void.scss
@@ -18,8 +18,9 @@
 @import 'modal';
 @import 'void__footer';
 @import 'googlemap';
+@import 'void__form';
 @import 'void__palette';
-@import 'form';
+//@import 'void__form';
 @import 'blog';
 @import 'social';
 @import 'mixins';
