--- a/greybox/sass/_module.scss
+++ b/greybox/sass/_module.scss
@@ -25,13 +25,13 @@
     margin-bottom: 18px;
   }
   ul{list-style: none;padding-left: 1.5em;}
-  ul li:before{
+  /*ul li:before{
   	color: #909090;
 		content:"─";
 		position:relative;
-		margin-left: -10px; /* optional, for multiline li element */
+		margin-left: -10px;
 		left: -5px;
-	}
+	}*/
   /*
 ul{
   	list-style: square inside url('data:image/gif;base64,R0lGODlhBQAKAIABAAAAAP///yH5BAEAAAEALAAAAAAFAAoAAAIIjI+ZwKwPUQEAOw==');
